--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,14 @@ timezone: America/Guatemala
 email: emenaalt@credomatic.com
 description: 'Sitio para tarjetas de Credomatic'
 baseurl: ''
-url: https://guayom.github.io
+url: https://guayom.github.io/tarjetas
 github_username: guayom
 markdown: kramdown
 permalink: pretty
 
 #Page Generator
 page_gen:
-  - data: contentful.spaces.tarjetas
-    template: <<name of the template to use to generate the page>>
-    name: <<field used to generate the filename>>
-    dir: <<directory in which files are to be generated>>
-    extension: <<extension used to generate the filename>>
+  - data: contentful.spaces.tarjetas.tarjetas
+    template: tarjeta
+    name: slug
+    dir: tarjetas
